# ZeroLang

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  TODO.md
test/ut/: CMakeLists.txt
test/ut/ast/: type_test.cpp
test/ut/ast/visitors/: copy_test.cpp  desugar_test.cpp  error_collector_test.cpp  lower_test.cpp  type_discoverer_test.cpp  type_resolver_test.cpp
test/ut/backend/codegen/wasm/: compiler_test.cpp
test/ut/backend/wasm/: compiler_test.cpp
test/ut/lexer/: lexer_test.cpp
test/ut/parser/: parser_test.cpp
test/ut/parser/cases/assign/: simple_assignment.json  simple_assignment.soul
test/ut/parser/cases/block/: block_empty.json  block_missing_closing_brace.json  block_missing_closing_brace_with_statements.json  block_missing_closing_brace_with_statements.soul
test/ut/parser/cases/expressions/: binary_expression_with_parentheses.json  binary_expression_with_parentheses.soul
test/ut/parser/cases/functions/: empty_function.json  empty_function.soul  empty_function_with_parameters.json  empty_function_with_parameters.soul  empty_function_without_parentheses.json  function_missing_type_declaration.json  function_missing_type_declaration.soul  function_with_empty_parentheses.json  function_with_nested_scope.json  function_with_parameters.json  function_with_parameters.soul  function_with_statements.json  function_with_statements.soul  function_without_parentheses.json  function_without_parentheses.soul
test/ut/parser/cases/if/: if_with_else_block.json  if_with_else_block.soul  if_without_else_block.json  if_without_else_block.soul
test/ut/parser/cases/loops/: empty_for_loop_with_all_statements.json  empty_for_loop_with_all_statements.soul  empty_for_loop_without_statements.json  empty_foreach_loop.json  empty_foreach_loop.soul  empty_while_loop_with_parentheses.json  empty_while_loop_without_parentheses.json
test/ut/parser/cases/modules/: empty_module.soul  module_without_statements.json
test/ut/parser/cases/structs/: empty_struct_declaration.json  empty_struct_declaration.soul  simple_struct_declaration.json  simple_struct_declaration.soul  struct_extraneous_comma_in_parameters.json  struct_extraneous_comma_in_parameters.soul  struct_missing_comma_in_parameters.json  struct_missing_comma_in_parameters.soul  struct_with_missing_closing_brace.json  struct_with_missing_closing_brace.soul  struct_with_missing_closing_brace_after_parameters.json  struct_with_missing_closing_brace_after_parameters.soul  struct_with_parameters.json  struct_with_parameters.soul  struct_without_parameters.json  struct_without_parameters.soul
test/ut/parser/cases/variable_declaration/: variable_declaration_simple.soul  variable_declaration_simple_mutable.json  (+1 more)
(+180 files in other folders)
